--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -7,39 +7,51 @@
             </mat-toolbar>
         </div>
         <div fxLayout="row nowrap" fxLayoutAlign="center center" class="connects-count-header">
-            <div fxLayout="column" fxFlex="0 0 60%" fxFlexFill class="connects-count-header-left">
-              <div fxLayout="row" fxLayoutAlign="space-around center">
+            <div fxLayout="column" fxFlex="0 0 70%" fxFlexFill class="connects-count-header-left">
+              <div class="black-band"><br> &nbsp;
+                Branding Conversations in FY22
+              </div>
+              <div class="title-text">
+                CBO Branding Conversations is one of the key activities under Special Recruitment Initiatives with the objective of optimizing candidate-organization relationship from the pre-hiring stage itself. The initiative has been devised in order to understand the queries of yet to join candidates and improve their understanding of the firm processes. The respective Talent Group leaders reach out to the candidates and connect with them to understand if any interventions are required. These feedbacks are passed on to the Talent team for any further action if required.
+              </div>
+            </div>
+            <div fxLayout="column" fxFlex="0 0 30%" fxFlexFill class="connects-count-header-right">
                 <div fxLayout="column" fxLayoutAlign="center center">
-                <div class="number">
-                  251
-                </div>
-                <div class="month-year">
-                  June 2022
-                </div>
-              </div>
-              <div class="main-text">
-                BRANDING <br>CONVERSATIONS IN FY22
-              </div>
-              <div fxLayout="column" fxLayoutAlign="space-around center">
-              <div class="chart">
-                <canvas width="300px" height="150px" baseChart
-                  [data]="doughnutChartData"
-                  [type]="doughnutChartType">
-                </canvas>
-              </div>
-              <div style="color: white;padding-top: 2px;">Practioners Joined %</div>
-            </div>
-            </div>
-          </div>
-            <div fxLayout="column" fxFlex="0 0 40%" fxFlexFill class="connects-count-header-right">
-                <div fxLayout="column" fxLayoutAlign="space-between center">
-                  <span class="my-connects">My Connects</span>
-                  <div fxLayout="row" fxLayoutAlign="space-around center">
-                    <div class="my-connects-green" (click)="openExcelDialog('Completed')">34<br>Completed</div>&nbsp;
-                    <div class="my-connects-orange" (click)="openExcelDialog('Approaching')">12<br>Approaching</div>&nbsp;
-                    <div class="my-connects-red" (click)="openExcelDialog('Past Due')">5<br>Past Due</div>&nbsp;
-                    <div class="my-connects-grey" (click)="openExcelDialog('Missed')">5<br>Missed</div>
+                  <div class="my-connects">
+                    My Connects
                   </div>
+                  <mat-card style="width: 80%; height: 6vh;margin-top: 15px;" class="mat-elevation-z4">
+                    <div fxLayout="row" fxLayoutAlign="space-around center">
+                      <mat-icon>handshake</mat-icon> 
+                      <div class="number-of-connects">34</div> 
+                      <div class="text-connects">Completed</div>
+                    </div>
+                    <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
+                  </mat-card>
+                  <mat-card style="width: 80%; height: 6vh;margin-top: 15px;" class="mat-elevation-z4">
+                    <div fxLayout="row" fxLayoutAlign="space-around center">
+                      <mat-icon>alarm</mat-icon> 
+                      <div class="number-of-connects">12</div> 
+                      <div class="text-connects">Approaching</div>
+                    </div>
+                    <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
+                  </mat-card>
+                  <mat-card style="width: 80%; height: 6vh;margin-top: 15px;" class="mat-elevation-z4">
+                    <div fxLayout="row" fxLayoutAlign="space-around center">
+                      <mat-icon>assignment</mat-icon> 
+                      <div class="number-of-connects">5</div> 
+                      <div class="text-connects">Past Due</div>
+                    </div>
+                    <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
+                  </mat-card>
+                  <mat-card style="width: 80%; height: 6vh; margin-top: 15px;" class="mat-elevation-z4">
+                    <div fxLayout="row" fxLayoutAlign="space-around center">
+                      <mat-icon>cancel</mat-icon> 
+                      <div class="number-of-connects">4</div> 
+                      <div class="text-connects">Missed</div>
+                    </div>
+                    <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
+                  </mat-card>
                 </div>
             </div>
         </div>
