--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -14,13 +14,46 @@
               <div class="title-text">
                 CBO Branding Conversations is one of the key activities under Special Recruitment Initiatives with the objective of optimizing candidate-organization relationship from the pre-hiring stage itself. The initiative has been devised in order to understand the queries of yet to join candidates and improve their understanding of the firm processes. The respective Talent Group leaders reach out to the candidates and connect with them to understand if any interventions are required. These feedbacks are passed on to the Talent team for any further action if required.
               </div>
+              <div fxLayout="row" fxLayoutAlign="space-around center">
+                <div fxLayout="column" fxLayoutAlign="center center" style="margin-top: 10px;">
+                  <div class="number">
+                    251
+                  </div>
+                  <div class="month-year">
+                    June 2022
+                  </div>
+                </div>
+                <div fxLayout="column" fxLayoutAlign="space-around center">
+                  <div class="chart">
+                    <canvas width="300px" height="150px" baseChart
+                      [data]="doughnutChartData"
+                      [type]="doughnutChartType">
+                    </canvas>
+                  </div>
+                  <div style="color: black;padding-top: 2px;">Practioners Joined %</div>
+                </div>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="center center">
+                <mat-card (click)="showDashboard()" style="text-align:left; width: 80%; height: 8vh;margin-top: 40px; margin-left: 22px;cursor: pointer;" class="mat-elevation-z4">
+                  My Dashboard
+                  <mat-card-content>
+                    Alignment on planned conversations showcasing overall status and insights on candidates joining the firm.
+                  </mat-card-content>
+                </mat-card>
+                <mat-card (click)="showOfferingPortfolio()" style="text-align:left; width: 80%; height: 8vh;margin-top: 40px;margin-left: 22px;cursor:pointer;" class="mat-elevation-z4">
+                  My Offering Portfolio
+                  <mat-card-content>
+                    Branding conversations on TG level and leaders who have been most active in completing planned connects.
+                  </mat-card-content>
+                </mat-card>
+              </div>
             </div>
             <div fxLayout="column" fxFlex="0 0 30%" fxFlexFill class="connects-count-header-right">
                 <div fxLayout="column" fxLayoutAlign="center center">
                   <div class="my-connects">
                     My Connects
                   </div>
-                  <mat-card style="width: 80%; height: 6vh;margin-top: 15px;" class="mat-elevation-z4">
+                  <mat-card style="width: 80%; height: 8vh;margin-top: 15px;" class="mat-elevation-z4">
                     <div fxLayout="row" fxLayoutAlign="space-around center">
                       <mat-icon>handshake</mat-icon> 
                       <div class="number-of-connects">34</div> 
@@ -28,7 +61,7 @@
                     </div>
                     <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
                   </mat-card>
-                  <mat-card style="width: 80%; height: 6vh;margin-top: 15px;" class="mat-elevation-z4">
+                  <mat-card style="width: 80%; height: 8vh;margin-top: 15px;" class="mat-elevation-z4">
                     <div fxLayout="row" fxLayoutAlign="space-around center">
                       <mat-icon>alarm</mat-icon> 
                       <div class="number-of-connects">12</div> 
@@ -36,7 +69,7 @@
                     </div>
                     <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
                   </mat-card>
-                  <mat-card style="width: 80%; height: 6vh;margin-top: 15px;" class="mat-elevation-z4">
+                  <mat-card style="width: 80%; height: 8vh;margin-top: 15px;" class="mat-elevation-z4">
                     <div fxLayout="row" fxLayoutAlign="space-around center">
                       <mat-icon>assignment</mat-icon> 
                       <div class="number-of-connects">5</div> 
@@ -44,7 +77,7 @@
                     </div>
                     <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
                   </mat-card>
-                  <mat-card style="width: 80%; height: 6vh; margin-top: 15px;" class="mat-elevation-z4">
+                  <mat-card style="width: 80%; height: 8vh; margin-top: 15px;" class="mat-elevation-z4">
                     <div fxLayout="row" fxLayoutAlign="space-around center">
                       <mat-icon>cancel</mat-icon> 
                       <div class="number-of-connects">4</div> 
@@ -71,14 +104,14 @@
                 <button mat-raised-button class="buttons-spacing" color="primary" (click)="onClick()">Last 3 months</button>
                 <button mat-raised-button class="buttons-spacing" color="primary" (click)="onClick()">Last 6 months</button>
         </div>
-        <mat-tab-group mat-align-tabs="center" mat-stretch-tabs class="mat-elevation-z4" #tabGroup (selectedTabChange)="displayTab($event)">
-            <mat-tab label="My Dashboard">
+        <div>
+            <div *ngIf="dashboardEnabled && !offeringPortfolioEnabled">
                 <app-dashboard></app-dashboard>
-            </mat-tab>
-            <mat-tab label="My Offering Portfolio">
+            </div>
+            <div *ngIf="!dashboardEnabled && offeringPortfolioEnabled">
                 <app-offering-portfolio></app-offering-portfolio>
-            </mat-tab>
-        </mat-tab-group>
+            </div>
+          </div>
         <div fxLayout="row nowrap" fxLayoutAlign="center center" class="copyright">
           Copyright © 2022 Deloitte Development LLC. All rights reserved.
         </div>
