--- a/src/app/excel-pop-up/excel-pop-up.component.scss
+++ b/src/app/excel-pop-up/excel-pop-up.component.scss
@@ -5,25 +5,33 @@
 .confirmation-dialog-container {
     width: 50vw !important;
     height: 50vh !important;
-  }
+}
 
 .confirmation-dialog-header {
     height: 14% !important;
     margin-bottom: 0px !important;
     overflow: hidden !important;
-  }
+}
   
-  .confirmation-dialog-body {
+.confirmation-dialog-body {
     height: 76% !important;
     overflow-y: auto !important;
     //font-size: 14px;
-  }
+}
   
-  .confirmation-dialog-footer {
+.confirmation-dialog-footer {
     justify-content: center !important;
     height: 10% !important;
     overflow: hidden !important;
-  }
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+.mat-raised-button.mat-primary {
+    background-color: rgb(46, 126, 165);
+}
 
 //   .mat-raised-button.mat-primary {
 //     background-color: green
