--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -8,8 +8,8 @@
         </div>
         <div fxLayout="row nowrap" fxLayoutAlign="center center" class="connects-count-header">
             <div fxLayout="column" fxFlex="0 0 70%" fxFlexFill class="connects-count-header-left">
-              <div class="black-band"><br> &nbsp;
-                Branding Conversations in FY22
+              <div class="black-band"><br>&nbsp;
+                <span>Branding Conversations in FY22</span><br>
               </div>
               <div class="title-text">
                 CBO Branding Conversations is one of the key activities under Special Recruitment Initiatives with the objective of optimizing candidate-organization relationship from the pre-hiring stage itself. The initiative has been devised in order to understand the queries of yet to join candidates and improve their understanding of the firm processes. The respective Talent Group leaders reach out to the candidates and connect with them to understand if any interventions are required. These feedbacks are passed on to the Talent team for any further action if required.
@@ -33,57 +33,71 @@
                   <div style="color: black;padding-top: 2px;">Practioners Joined %</div>
                 </div>
               </div>
-              <div fxLayout="row" fxLayoutAlign="center center">
-                <mat-card (click)="showDashboard()" style="text-align:left; width: 80%; height: 8vh;margin-top: 40px; margin-left: 22px;cursor: pointer;" class="mat-elevation-z4">
-                  My Dashboard
+              <div fxLayout="row" fxLayoutAlign="center center" class="tab-options">
+                <mat-card [ngClass]="isSelected===1 ? 'selectedTab' : 'mat-elevation-z4' " (click)="showDashboard()" style="text-align:left; width: 80%; height: 8vh;margin-top: 40px; margin-left: 22px;cursor: pointer;" class="mat-elevation-z4">
+                  <div fxLayout="row" fxLayoutAlign="center start">
+                  <div>
+                    <mat-icon>dashboard</mat-icon>
+                  </div>
+                  <div style="margin-left: 20px;">
+                  <span style="font-weight: 600;">My Talent Dashboard</span>
                   <mat-card-content>
                     Alignment on planned conversations showcasing overall status and insights on candidates joining the firm.
                   </mat-card-content>
+                </div>
+              </div>
                 </mat-card>
-                <mat-card (click)="showOfferingPortfolio()" style="text-align:left; width: 80%; height: 8vh;margin-top: 40px;margin-left: 22px;cursor:pointer;" class="mat-elevation-z4">
-                  My Offering Portfolio
+                <mat-card [ngClass]="isSelected===2 ? 'selectedTab' : 'mat-elevation-z4' " (click)="showOfferingPortfolio()" style="text-align:left; width: 80%; height: 8vh;margin-top: 40px;margin-left: 22px;cursor:pointer;">
+                  <div fxLayout="row" fxLayoutAlign="center start">
+                    <div>
+                      <mat-icon>people</mat-icon>
+                    </div>
+                    <div style="margin-left: 20px;">
+                    <span style="font-weight: 600;">My Offering Portfolio</span>
                   <mat-card-content>
                     Branding conversations on TG level and leaders who have been most active in completing planned connects.
                   </mat-card-content>
+                </div>
+              </div>
                 </mat-card>
               </div>
             </div>
             <div fxLayout="column" fxFlex="0 0 30%" fxFlexFill class="connects-count-header-right">
+              <div class="my-connects">
+                My Talent Connects
+              </div>
                 <div fxLayout="column" fxLayoutAlign="center center">
-                  <div class="my-connects">
-                    My Connects
-                  </div>
                   <mat-card style="width: 80%; height: 8vh;margin-top: 15px;" class="mat-elevation-z4">
-                    <div fxLayout="row" fxLayoutAlign="space-around center">
+                    <div fxLayout="row" fxLayoutAlign="center center">
                       <mat-icon>handshake</mat-icon> 
                       <div class="number-of-connects">34</div> 
                       <div class="text-connects">Completed</div>
                     </div>
-                    <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
+                    <mat-card-footer class="view-details" (click)="openExcelDialog('Completed')">View Details</mat-card-footer>
                   </mat-card>
                   <mat-card style="width: 80%; height: 8vh;margin-top: 15px;" class="mat-elevation-z4">
-                    <div fxLayout="row" fxLayoutAlign="space-around center">
+                    <div fxLayout="row" fxLayoutAlign="center center">
                       <mat-icon>alarm</mat-icon> 
                       <div class="number-of-connects">12</div> 
                       <div class="text-connects">Approaching</div>
                     </div>
-                    <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
+                    <mat-card-footer class="view-details" (click)="openExcelDialog('Approaching')">View Details</mat-card-footer>
                   </mat-card>
                   <mat-card style="width: 80%; height: 8vh;margin-top: 15px;" class="mat-elevation-z4">
-                    <div fxLayout="row" fxLayoutAlign="space-around center">
+                    <div fxLayout="row" fxLayoutAlign="center center">
                       <mat-icon>assignment</mat-icon> 
                       <div class="number-of-connects">5</div> 
                       <div class="text-connects">Past Due</div>
                     </div>
-                    <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
+                    <mat-card-footer class="view-details" (click)="openExcelDialog('Past Due')">View Details</mat-card-footer>
                   </mat-card>
                   <mat-card style="width: 80%; height: 8vh; margin-top: 15px;" class="mat-elevation-z4">
-                    <div fxLayout="row" fxLayoutAlign="space-around center">
+                    <div fxLayout="row" fxLayoutAlign="center center">
                       <mat-icon>cancel</mat-icon> 
                       <div class="number-of-connects">4</div> 
                       <div class="text-connects">Missed</div>
                     </div>
-                    <mat-card-footer class="view-details"><a href="https://www.google.com">View Details</a></mat-card-footer>
+                    <mat-card-footer class="view-details" (click)="openExcelDialog('Missed')">View Details</mat-card-footer>
                   </mat-card>
                 </div>
             </div>
