image path changed

--- a/src/app/offering-portfolio/offering-portfolio.component.html
+++ b/src/app/offering-portfolio/offering-portfolio.component.html
@@ -38,11 +38,11 @@
         <img src="../../assets/images/award.png" class="trophy-image">
       </div> -->
       <div>
-        <img src="../../assets/images/people.jpg" class="trophy-image">
+        <img src="assets/images/people.jpg" class="trophy-image">
       </div>
       <div fxLayout="column wrap" fxLayoutAlign="center center">
         <div class="container" *ngFor="let array of repetitionArray; let i=index">
-          <img src="../../assets/images/ribbon.png" class="ribbon-image">
+          <img src="assets/images/ribbon.png" class="ribbon-image">
           <div class="centered">{{i+1}}. {{array}}</div>
         <!-- <ol role="list">
             <li role="listitem">John Smith</li>
