--- a/src/app/excel-pop-up/excel-pop-up.component.html
+++ b/src/app/excel-pop-up/excel-pop-up.component.html
@@ -2,7 +2,7 @@
 
     <div mat-dialog-title class="confirmation-dialog-header">
       <div fxFlexLayout="row nowrap">
-        <div fxFlex="0 0 96%" class="text-center header-for-dialog">My Talent Connects - {{data}}</div>
+        <div fxFlex="0 0 96%" class="text-center header-for-dialog">My Connects - {{data}}</div>
         <div fxFlex="0 0 4%" class="text-right"><mat-icon [inline]="true" class="clickable" (click)="close()">close</mat-icon></div>
       </div>
     </div>
