--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -12,10 +12,13 @@
                 <span>Branding Conversations in FY22</span><br>
               </div>
               <div class="title-text">
-                CBO Branding Conversations is one of the key activities under Special Recruitment Initiatives with the objective of optimizing candidate-organization relationship from the pre-hiring stage itself. The initiative has been devised in order to understand the queries of yet to join candidates and improve their understanding of the firm processes. The respective Talent Group leaders reach out to the candidates and connect with them to understand if any interventions are required. These feedbacks are passed on to the Talent team for any further action if required.
+                CBO Branding Conversations is one of the key activities under Special Recruitment Initiatives with the objective of enhancing candidate-organization relationship from the pre-hiring stage itself. Through this initiative, we intend to build a first-hand impression of Deloitte culture on our yet to join candidates, thereby resulting in "right fit" joiners with longer expected retention tenure. Our research has shown that, such semi- formal communications from leadership, goes a long way in building trust and sowing the seeds of our culture for incoming practitioners. The respective Talent Group leaders & their representatives reach out to the candidates and connect with them to understand if any interventions are required. These feedbacks are passed on to the Talent team for any further action if required.
               </div>
               <div fxLayout="row" fxLayoutAlign="space-around center">
                 <div fxLayout="column" fxLayoutAlign="center center" style="margin-top: 10px;">
+                  <div class="text-above-number">
+                    Conversations Completed
+                  </div>
                   <div class="number">
                     251
                   </div>
@@ -24,13 +27,16 @@
                   </div>
                 </div>
                 <div fxLayout="column" fxLayoutAlign="space-around center">
+                  <div class="text-above-chart">
+                    Impact Created
+                  </div>
                   <div class="chart">
                     <canvas width="300px" height="150px" baseChart
                       [data]="doughnutChartData"
                       [type]="doughnutChartType">
                     </canvas>
                   </div>
-                  <div style="color: black;padding-top: 2px;">Practioners Joined %</div>
+                  <div style="color: rgb(46, 126, 165);padding-top: 5px; font-weight: 500;">Practioners Joined</div>
                 </div>
               </div>
               <div fxLayout="row" fxLayoutAlign="center center" class="tab-options">
@@ -64,7 +70,7 @@
             </div>
             <div fxLayout="column" fxFlex="0 0 30%" fxFlexFill class="connects-count-header-right">
               <div class="my-connects">
-                My Talent Connects
+                My Connects
               </div>
                 <div fxLayout="column" fxLayoutAlign="center center">
                   <mat-card style="width: 80%; height: 8vh;margin-top: 15px;" class="mat-elevation-z4">
