--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
 <div>
     <div fxLayout="row" fxLayoutAlign="space-around center" style="margin-top: 10px; margin-bottom: 10px;">
-        <div style="padding-left: 30px;">Total Connects</div>
-        <div>Total Practioners Joined</div>
+        <div style="margin-left: -80px;">Total Connects</div>
+        <div style="margin-left: 10px;">Total Practioners Joined</div>
+        <div style="margin-left: -40px;">Practioners' Technology / Skill-set</div>
     </div>
     <div fxLayout="row" fxLayoutAlign="space-around center" style="padding-bottom: 10px;">
       <mat-card>
@@ -14,23 +15,23 @@
         </canvas>
       </mat-card>
       <mat-card>
-        Technology/Skill-set
-        <canvas baseChart
-          [data]="barChartData"
-          [options]="barChartOptions"
-          [plugins]="barChartPlugins"
-          [type]="barChartType"
-          (chartHover)="barChartHovered($event)"
-          (chartClick)="barChartClicked($event)">
-        </canvas>
-      </mat-card>
-      <mat-card>
         Status
       <canvas width="300px" height="150px" baseChart
               [data]="statusPieChartData"
               [type]="statusPieChartType"
               [options]="statusPieChartOptions"
               [plugins]="statusPieChartPlugins">
+      </canvas>
+    </mat-card>
+    <mat-card>
+      Technology/Skill-set
+      <canvas baseChart
+        [data]="barChartData"
+        [options]="barChartOptions"
+        [plugins]="barChartPlugins"
+        [type]="barChartType"
+        (chartHover)="barChartHovered($event)"
+        (chartClick)="barChartClicked($event)">
       </canvas>
     </mat-card>
     </div>
