--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -32,7 +32,7 @@
 }
 
 .fields-spacing {
-    margin-top: 80px;
+    margin-top: 120px;
 }
 
 .buttons-spacing {
@@ -46,6 +46,14 @@
     //border: 1px solid black;
 }
 
+.text-above-number {
+    margin-top: 20px;
+    margin-left: 60px;
+    font-size: 100%;
+    font-weight: 500;
+    color: black;
+}
+
 .number {
     margin-left: 70px;
     margin-top: 50px;
@@ -55,19 +63,28 @@
 }
 
 .month-year {
-    margin-top: 40px;
+    margin-top: 45px;
     margin-left: 60px;
     font-size: 100%;
     font-weight: 500;
     color: rgb(46, 126, 165);
 }
 
-.my-connects {
+.text-above-chart {
     margin-top: 20px;
+    margin-left: 0px;
+    font-size: 100%;
+    font-weight: 500;
+    color: black;
+}
+
+.my-connects {
+    margin-top: 30px;
     margin-left: 20px;
     width: auto;
     padding-top: 10px;
     padding-left: 10px;
+    padding-bottom: 20px;
     font-size: 20px;
     font-weight: 550;
     text-align: start;
@@ -207,7 +224,7 @@
 }
 
 .tab-options {
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 .mat-raised-button.mat-primary {
