--- a/src/app/offering-portfolio/offering-portfolio.component.html
+++ b/src/app/offering-portfolio/offering-portfolio.component.html
@@ -7,32 +7,23 @@
         </mat-select>
     </mat-form-field>
     </div>
-    <div fxLayout="row" fxLayoutAlign="left left">
-        <div style="padding-left: 400px;padding-bottom: 25px;">Total Connects</div>
+    <div fxLayout="row" fxLayoutAlign="space-around center" style="margin-top: 10px; margin-bottom: 10px;">
+        <div style="margin-left: -80px;">Total Connects</div>
+        <div style="margin-left: 10px;">Top Brand Ambassadors</div>
+        <div style="margin-left: -40px;">Practioners' Technology / Skill-set</div>
     </div>
     <div fxLayout="row" fxLayoutAlign="space-around center" style="padding-bottom: 10px;">
       <mat-card>
           Connects
-        <canvas width="250px" height="130px" baseChart
+        <canvas width="280px" height="130px" baseChart
                 [data]="connectsPieChartData"
                 [type]="connectsPieChartType"
                 [options]="connectsPieChartOptions"
                 [plugins]="connectsPieChartPlugins">
         </canvas>
       </mat-card>
-      <mat-card>
-        Technology/Skill-set
-        <canvas baseChart
-          [data]="barChartData"
-          [options]="barChartOptions"
-          [plugins]="barChartPlugins"
-          [type]="barChartType"
-          (chartHover)="barChartHovered($event)"
-          (chartClick)="barChartClicked($event)">
-        </canvas>
-      </mat-card>
       <div class="list">
-        <h1><b>Top Brand Ambassadors</b></h1>
+        <!-- <h1><b>Top Brand Ambassadors</b></h1> -->
         <div fxLayout="row" fxLayoutAlign="space-around center">
         <!-- <div style="display: flex; justify-content:center;">
         <img src="../../assets/images/award.png" class="trophy-image">
@@ -52,7 +43,18 @@
       </div>
     </div>
     </div>
-      </div>
+    </div>
+    <mat-card>
+      Technology/Skill-set
+      <canvas baseChart
+        [data]="barChartData"
+        [options]="barChartOptions"
+        [plugins]="barChartPlugins"
+        [type]="barChartType"
+        (chartHover)="barChartHovered($event)"
+        (chartClick)="barChartClicked($event)">
+      </canvas>
+    </mat-card>
     </div>
   </div>
   <!-- <div class="button-row">
